--- a/QLTN_LT.csproj
+++ b/QLTN_LT.csproj
@@ -83,6 +83,7 @@
     <Compile Include="DAL\CategoryDAL.cs" />
     <Compile Include="DAL\CustomerDAL.cs" />
     <Compile Include="DAL\DatabaseHelper.cs" />
+    <Compile Include="DAL\ConnectionSettings.cs" />
     <Compile Include="DAL\InventoryDAL.cs" />
     <Compile Include="DAL\MenuDAL.cs" />
     <Compile Include="DAL\OrderDAL.cs" />
@@ -123,6 +124,9 @@
     </Compile>
     <Compile Include="GUI\Authentication\FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Authentication\FormConfig.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\Category\FormCategoryList.cs">
       <SubType>Form</SubType>
@@ -312,45 +316,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="GUI\Authentication\FormLogin.resx">
-      <DependentUpon>FormLogin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Category\FormCategoryList.resx">
-      <DependentUpon>FormCategoryList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Category\FormCategoryAdd.resx">
-      <DependentUpon>FormCategoryAdd.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Customer\FormCustomerList.resx">
-      <DependentUpon>FormCustomerList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Dashboard\FormDashboard.resx">
-      <DependentUpon>FormDashboard.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Inventory\FormInventoryList.resx">
-      <DependentUpon>FormInventoryList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Main\FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Menu\FormMenuList.resx">
-      <DependentUpon>FormMenuList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Menu\FormMenuEdit.resx">
-      <DependentUpon>FormMenuEdit.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
     <EmbeddedResource Include="GUI\Order\FormOrderList.resx">
       <DependentUpon>FormOrderList.cs</DependentUpon>
     </EmbeddedResource>
