Enhance UI responsiveness and QR order features
Improved keyboard navigation, animations, and responsive design across dashboard, order, and menu forms. Added advanced QR code context menu, order creation with reservation support, and caching for dashboard/order data. Refactored animation helpers for compatibility and updated project references for new utilities.

--- a/QLTN_LT.csproj
+++ b/QLTN_LT.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsFormsIntegration" />
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <!-- BLL -->
@@ -137,6 +138,20 @@
     <Compile Include="GUI\Utilities\AuthorizationHelper.cs" />
     <Compile Include="GUI\Utilities\Rbac.cs" />
     <Compile Include="GUI\Utilities\Roles.cs" />
+    <Compile Include="GUI\Utilities\AnimationHelper.cs" />
+    <Compile Include="GUI\Utilities\ResponsiveHelper.cs" />
+    <Compile Include="GUI\Utilities\KeyboardNavigationHelper.cs" />
+    <Compile Include="GUI\Utilities\UXInteractionHelper.cs" />
+    <Compile Include="GUI\Utilities\DataBindingHelper.cs" />
+    <Compile Include="GUI\Controls\CardItemControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\Controls\DataListItemControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\Controls\TabNavigationControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="GUI\Authentication\FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
