Add management services and enhance business logic
Introduced InventoryManagementService, OrderManagementService, PaymentManagementService, ServiceLocator, and VietQRIntegrationService for modular business logic. Enhanced AuthBLL with error handling for UI, improved CartService with item decrement and table support, added menu item availability control, and order status transitions. Updated configuration for VietQR integration and improved code structure for maintainability.

--- a/App.config
+++ b/App.config
@@ -2,9 +2,18 @@
 <configuration>
   <connectionStrings>
     <!-- TODO: Cập nhật Server cho đúng môi trường của bạn -->
-    <add name="DefaultConnection" connectionString="Data Source=TERRYKOZTE\SQLEXPRESS;Initial Catalog=qlhs;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=TERRYKOZTE\SQLEXPRESS;Initial Catalog=qlhs;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
+  <appSettings>
+    <!-- VietQR Defaults (có thể thay đổi trong runtime hoặc qua file cấu hình môi trường) -->
+    <add key="VietQR_BankId" value="" />
+    <add key="VietQR_AccountNo" value="" />
+    <add key="VietQR_AccountName" value="" />
+    <!-- Optional: API credentials cho v2/generate -->
+    <add key="VietQR_ClientId" value="" />
+    <add key="VietQR_ApiKey" value="" />
+  </appSettings>
 </configuration>
