--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,5 @@
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net48" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
   <package id="QRCoder" version="1.4.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
